@@ -44,7 +44,7 @@ typedef struct
     gsl_matrix *J;
     gsl_matrix *q;
     gsl_matrix *r;
-    gsl_vector *rdiag;
+    gsl_vector *tau;
     gsl_vector *diag;
     gsl_vector *qtf;
     gsl_vector *newton;
@@ -72,7 +72,7 @@ hybrid_alloc (void *vstate, size_t n)
 {
   hybrid_state_t *state = (hybrid_state_t *) vstate;
   gsl_matrix *J, *q, *r;
-  gsl_vector *rdiag, *diag, *qtf, *newton, *gradient, *x_trial, *f_trial,
+  gsl_vector *tau, *diag, *qtf, *newton, *gradient, *x_trial, *f_trial,
    *df, *qtdf, *rdx, *w, *v;
 
   J = gsl_matrix_calloc (n, n);
@@ -107,18 +107,18 @@ hybrid_alloc (void *vstate, size_t n)
 
   state->r = r;
 
-  rdiag = gsl_vector_calloc (n);
+  tau = gsl_vector_calloc (n);
 
-  if (rdiag == 0)
+  if (tau == 0)
     {
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
 
-      GSL_ERROR_VAL ("failed to allocate space for rdiag", GSL_ENOMEM, 0);
+      GSL_ERROR_VAL ("failed to allocate space for tau", GSL_ENOMEM, 0);
     }
 
-  state->rdiag = rdiag;
+  state->tau = tau;
 
   diag = gsl_vector_calloc (n);
 
@@ -127,7 +127,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
 
       GSL_ERROR_VAL ("failed to allocate space for diag", GSL_ENOMEM, 0);
     }
@@ -141,7 +141,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
 
       GSL_ERROR_VAL ("failed to allocate space for qtf", GSL_ENOMEM, 0);
@@ -156,7 +156,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
 
@@ -172,7 +172,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -189,7 +189,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -207,7 +207,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -226,7 +226,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -246,7 +246,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -268,7 +268,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -290,7 +290,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -313,7 +313,7 @@ hybrid_alloc (void *vstate, size_t n)
       gsl_matrix_free (J);
       gsl_matrix_free (q);
       gsl_matrix_free (r);
-      gsl_vector_free (rdiag);
+      gsl_vector_free (tau);
       gsl_vector_free (diag);
       gsl_vector_free (qtf);
       gsl_vector_free (newton);
@@ -355,7 +355,7 @@ set (void *vstate, gsl_multiroot_function * func, gsl_vector * x, gsl_vector * f
   gsl_matrix *J = state->J;
   gsl_matrix *q = state->q;
   gsl_matrix *r = state->r;
-  gsl_vector *rdiag = state->rdiag;
+  gsl_vector *tau = state->tau;
   gsl_vector *diag = state->diag;
   
   GSL_MULTIROOT_FN_EVAL (func, x, f);
@@ -384,8 +384,8 @@ set (void *vstate, gsl_multiroot_function * func, gsl_vector * x, gsl_vector * f
 
   /* Factorize J into QR decomposition */
 
-  gsl_linalg_QR_decomp (J, rdiag);
-  gsl_linalg_QR_unpack (J, rdiag, q, r);
+  gsl_linalg_QR_decomp (J, tau);
+  gsl_linalg_QR_unpack (J, tau, q, r);
 
   return GSL_SUCCESS;
 }
@@ -414,7 +414,7 @@ iterate (void *vstate, gsl_multiroot_function * func, gsl_vector * x, gsl_vector
   gsl_matrix *J = state->J;
   gsl_matrix *q = state->q;
   gsl_matrix *r = state->r;
-  gsl_vector *rdiag = state->rdiag;
+  gsl_vector *tau = state->tau;
   gsl_vector *diag = state->diag;
   gsl_vector *qtf = state->qtf;
   gsl_vector *x_trial = state->x_trial;
@@ -545,8 +545,8 @@ iterate (void *vstate, gsl_multiroot_function * func, gsl_vector * x, gsl_vector
 
       /* Factorize J into QR decomposition */
 
-      gsl_linalg_QR_decomp (J, rdiag);
-      gsl_linalg_QR_unpack (J, rdiag, q, r);
+      gsl_linalg_QR_decomp (J, tau);
+      gsl_linalg_QR_unpack (J, tau, q, r);
 
       return GSL_SUCCESS;
     }
@@ -595,7 +595,7 @@ hybrid_free (void *vstate)
   gsl_vector_free (state->newton);
   gsl_vector_free (state->qtf);
   gsl_vector_free (state->diag);
-  gsl_vector_free (state->rdiag);
+  gsl_vector_free (state->tau);
   gsl_matrix_free (state->r);
   gsl_matrix_free (state->q);
   gsl_matrix_free (state->J);
